UX: fix overlap obstructed anon topic reply
This commit addresses the overlap between the anonymous reply button in a topic and the related or new and unread topics component.

--- a/app/assets/stylesheets/common/components/more-topics.scss
+++ b/app/assets/stylesheets/common/components/more-topics.scss
@@ -53,6 +53,10 @@
         }
       }
     }
+
+    &-title {
+      display: inline-block;
+    }
   }
 
   // Target the .badge-category text, the bullet icon needs to maintain `display: block`
